--- a/2024-08-06-HTAhackathon-packages/index.qmd
+++ b/2024-08-06-HTAhackathon-packages/index.qmd
@@ -203,3 +203,142 @@ library(stringsplitter)
 splitstring("a,b,c")
 #> [1] "a" "b" "c"
 ```
+
+## Some Good Practices {.center .smaller}
+
+> *One of the things research programmers struggle with is the transition from exploration to infrastructure, i.e., from “coding to figure out what the problem is” to “I’m building a reusable tool”. Habits from the first are often carried over to the second.*
+
+-- Tweet from [Greg Wilson 2018][wilson]
+
+[wilson]: https://twitter.com/gvwilson/status/1028964474135429122
+
+## Don't trust `rm(list = ls())`
+
+::: {.callout-important}
+If the first line of your R script is
+
+```{.r code-line-numbers="false" style="font-size: 200%;"}
+rm(list = ls())
+```
+
+I will come into your office and SET YOUR COMPUTER ON FIRE 🔥
+:::
+
+::: {style="font-size: 60%;"}
+-- [Zen And The aRt Of Workflow Maintenance - Jenny Bryan][bryan-zen-37]
+:::
+
+. . .
+
+<br>
+
+Instead [start R with a clean slate and restart often][wtfr-restart]
+
+[bryan-zen-37]: https://speakerdeck.com/jennybc/zen-and-the-art-of-workflow-maintenance?slide=37
+[wtfr-restart]: https://rstats.wtf/source-and-blank-slates#always-start-r-with-a-blank-slate
+
+## Restart your R session regularly
+
+:::: {.columns}
+
+::: {.column}
+![Change these settings in RStudio](figures/rstudio-settings.png){fig-align="center" fig-alt="Recommended RStudio settings"}
+:::
+
+::: {.column}
+![](figures/rstudio-restart.png){width=80% fig-align="center" fig-alt="Restart RStudio"}
+:::
+
+::::
+
+## 
+
+![](figures/if-you-liked-it-you-should-have-saved-the-source-for-it.jpg)
+
+::: {style="font-size: 60%;"}
+-- [Saving Source and blank slates | What They Forgot to Teach You About R][wtfr-saving-source]
+:::
+
+[wtfr-saving-source]: https://rstats.wtf/source-and-blank-slates
+
+
+## Don't do `setwd()`
+
+::: {.callout-important}
+If the first line of your R script is
+
+```{.r code-line-numbers="false" style="font-size: 200%;"}
+setwd("C:\Users\myself\path\that\only\I\have")
+```
+
+I will come into your office and SET YOUR COMPUTER ON FIRE 🔥
+:::
+
+::: {style="font-size: 60%;"}
+-- [Zen And The aRt Of Workflow Maintenance - Jenny Bryan][bryan-zen-47]
+:::
+
+. . . 
+
+<br>
+
+Use a [project-oriented workflow][wtfr-projects] instead
+
+[bryan-zen-47]: https://speakerdeck.com/jennybc/zen-and-the-art-of-workflow-maintenance?slide=47
+[wtfr-projects]: https://rstats.wtf/projects
+
+## Advanced topics {.center}
+
+## Debugging
+
+![](figures/debugging.jpg){fig-align="center" fig-alt="What debugging feels like"}
+
+## Code formatting
+
+![](figures/code-formatting-meme.png){width=50% fig-align="center" fig-alt="Code formatting meme"}
+
+::: {style="text-align: center;"}
+_Because readability **is** important_
+:::
+
+## Do's and don'ts
+
+```{.r}
+# Don’t do this
+if(x<100){
+  y<-200} 
+
+# Do this instead
+if (x < 100) {
+  y <- 200
+}
+
+
+# NEVER use the shorthand versions of TRUE and FALSE
+# Why? This is why:
+T <- FALSE # this is valid R code # <1>
+```
+
+1. If you really want to mess with someone's R code, see [evil.R][evil-R]
+
+[evil-R]: https://github.com/romainfrancois/evil.R/blob/397639f0ba6ddd8b6ff28d455016dacf4d444e73/R/evil.R#L49-L50
+
+## Resources
+
+::: {.nonincremental}
+* [*R Packages*][r-pkgs] by Hadley Wickham and Jenny Bryan – *The Golden Standard*
+* [*What They Forgot to Teach You About R*][wtf-r] by Jenny Bryan
+
+
+<br>
+
+* [*Tidyverse style guide*][tidyverse-style]
+* [*“Better packages”*][better-packages] presentation by Maëlle Salmon
+* [*Advanced R*][adv-r] by Hadley Wickham
+:::
+
+[r-pkgs]: https://r-pkgs.org
+[wtf-r]: https://rstats.wtf
+[tidyverse-style]: https://style.tidyverse.org
+[better-packages]: https://rpkgdev-rocket-2024.netlify.app/taste-abilities/slides/#/
+[adv-r]: https://adv-r.hadley.nz
