Fix missing Quarto fence close

--- a/2024-08-06-HTAhackathon-packages/index.qmd
+++ b/2024-08-06-HTAhackathon-packages/index.qmd
@@ -108,7 +108,9 @@ check()
 ## RStudio keyboard shortcuts
 
 - `Shift + Ctrl/Cmd + L` to load all
-- `Shift + Ctrl/Cmd + E` to run checks :::
+- `Shift + Ctrl/Cmd + E` to run checks
+
+:::
 
 ## 📝 Add documentation
 
