Add speed-comparison figure

--- a/2025-12-07-DevOpsHour-Go/index.qmd
+++ b/2025-12-07-DevOpsHour-Go/index.qmd
@@ -89,8 +89,16 @@ go doc
 
 ## A Note On Performance
 
+::: {style="font-size: 50%;"}
+
 > Go has excellent performance right out of the box. By design, there are no
 > knobs or levers that you can use to squeeze more performance out of Go
+>
+> -- _[Steve Francia (Go Team)](https://spf13.com/p/rust-vs-go-better-together)_
+
+:::
+
+![](figures/speed-comparison.png){fig-align="center" fig-alt="Speed comparison of programming languages"}
 
 ---
 
